SUBDIRS = src gdkmm

EXTRA_DIST = README gdkmmconfig.h.in gdkmm-2.0.pc.in gdkmm.h

gdkmm_includedir	= $(includedir)/gtkmm-2.0
gdkmm_include_HEADERS	= gdkmm.h

gdkmm_configdir		= $(libdir)/gtkmm-2.0/include
gdkmm_config_DATA	= gdkmmconfig.h

pkgconfigdir		= $(libdir)/pkgconfig
pkgconfig_DATA		= gdkmm-2.0.pc

