SUBDIRS = src gtkmm

EXTRA_DIST = README gtkmmconfig.h.in gtkmm-2.0.pc.in

gtkmm_includedir	= $(includedir)/gtkmm-2.0
gtkmm_include_HEADERS	= gtkmm.h

gtkmm_configdir		= $(libdir)/gtkmm-2.0/include
gtkmm_config_DATA	= gtkmmconfig.h

pkgconfigdir		= $(libdir)/pkgconfig
pkgconfig_DATA		= gtkmm-2.0.pc

